--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,5 +1,3 @@
-
-
 {
   "name": "backend",
   "version": "1.0.0",
@@ -14,11 +12,14 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.0"
   },
   "devDependencies": {
