--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,10 +17,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.0",
+    "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
-    "mysql2": "^3.14.0"
+    "mysql2": "^3.14.0",
+    "nodemailer": "^6.10.0",
+    "twilio": "^5.5.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
