--- a/Backend/package.json
+++ b/Backend/package.json
@@ -23,6 +23,7 @@
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.0",
+    "razorpay": "^2.9.6",
     "twilio": "^5.5.1"
   },
   "devDependencies": {
