--- a/vite-react-app/package.json
+++ b/vite-react-app/package.json
@@ -10,12 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "html2pdf.js": "^0.10.3",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
     "react": "^19.0.0",
     "react-chartkick": "^0.5.4",
     "react-dom": "^19.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0"
   },
   "devDependencies": {
