--- a/Backend/package.json
+++ b/Backend/package.json
@@ -24,7 +24,9 @@
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.0",
     "razorpay": "^2.9.6",
-    "twilio": "^5.5.1"
+    "twilio": "^5.5.1",
+    "winston": "^3.17.0",
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
