--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,6 +19,7 @@
     "express": "^4.21.0",
     "ioredis": "^5.6.0",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.12.9",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.14.0",
