--- a/vite-react-app/package.json
+++ b/vite-react-app/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
+    "file-saver": "^2.0.5",
     "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
@@ -21,7 +22,8 @@
     "react-chartkick": "^0.5.4",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.4.0"
+    "react-router-dom": "^7.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
