--- a/vite-react-app/package.json
+++ b/vite-react-app/package.json
@@ -23,6 +23,7 @@
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
+    "recharts": "^3.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
