--- a/vite-react-app/package.json
+++ b/vite-react-app/package.json
@@ -21,7 +21,9 @@
     "react": "^19.0.0",
     "react-chartkick": "^0.5.4",
     "react-dom": "^19.0.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.4.0",
     "recharts": "^3.2.0",
