--- a/vite-react-app/package.json
+++ b/vite-react-app/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "file-saver": "^2.0.5",
+    "framer-motion": "^12.23.24",
     "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.511.0",
